Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48717

linux [ -no-glib ] -> QApplication::postEvent -> wrong process order

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.5.0, 5.9
    • QPA: X11/XCB
    • None
    • Cortex A8, Linux Kernel 3.12.30, Busybox 1.23.2, Qt 5.5.0

      While using squish for integration testing, a wrong behavior using QApplication::postEvent was discovered.

      The documentation says 'Events with equal priority will be processed in the order posted'. We are using QApplication::postEvent for MouseButtonPress and MouseButtonRelease events.

      This doesn't work on your Linux Arm Target. The events were processed in the wrong order. The same source Code, compiled for x86 win32 or x86 Linux, works without problems.

      Source Code for a minimal example attached.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            georg.brand Georg Brand
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes